<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageSine2"
            android:layout_width="198dp"
            android:layout_height="126dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/ImageSineDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/sine" />

        <EditText
            android:id="@+id/editTextA1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintA"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextK1"
            app:layout_constraintEnd_toStartOf="@+id/editTextB1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextB1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintB"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextH1"
            app:layout_constraintEnd_toStartOf="@+id/editTextJ1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextA1" />

        <EditText
            android:id="@+id/editTextJ1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintJ"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextH1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextB1" />

        <EditText
            android:id="@+id/editTextK1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintK"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/CalculateButton1"
            app:layout_constraintEnd_toStartOf="@+id/editTextH1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextH1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintH"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/HelpButton1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextK1" />

        <Button
            android:id="@+id/CalculateButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/CalculateButtonText"
            app:layout_constraintBottom_toTopOf="@+id/graph1"
            app:layout_constraintEnd_toStartOf="@+id/HelpButton1"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/HelpButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/HelpButtonText"
            app:layout_constraintBottom_toTopOf="@+id/graph1"
            app:layout_constraintEnd_toStartOf="@+id/ReturnButton4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/CalculateButton1" />

        <TextView
            android:id="@+id/textViewSolutionTrap1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Placeholder1"
            app:layout_constraintBottom_toTopOf="@+id/textViewSolutionSimpson1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CalculateButton1" />

        <TextView
            android:id="@+id/textViewSolutionSimpson1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Placeholder2"
            app:layout_constraintBottom_toTopOf="@+id/textViewSolutionExact1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSolutionTrap1" />

        <TextView
            android:id="@+id/textViewSolutionExact1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Placeholder3"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/graph1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSolutionSimpson1" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph1"
            android:layout_width="0dp"
            android:layout_height="225dip"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ReturnButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/ReturnButtonText"
            app:layout_constraintBottom_toTopOf="@+id/graph1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/HelpButton1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>