<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CosineFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageCosine2"
            android:layout_width="198dp"
            android:layout_height="126dp"
            android:layout_marginTop="25dp"
            android:contentDescription="@string/ImageCosineDesc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cosine" />

        <EditText
            android:id="@+id/editTextA2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintA"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextK2"
            app:layout_constraintEnd_toStartOf="@+id/editTextB2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextB2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintB"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextH2"
            app:layout_constraintEnd_toStartOf="@+id/editTextJ2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextA2" />

        <EditText
            android:id="@+id/editTextJ2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintJ"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/editTextH2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextB2" />

        <EditText
            android:id="@+id/editTextK2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintK"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/CalculateButton2"
            app:layout_constraintEnd_toStartOf="@+id/editTextH2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextH2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/HintH"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/HelpButton2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/editTextK2" />

        <Button
            android:id="@+id/CalculateButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/CalculateButtonText"
            app:layout_constraintBottom_toTopOf="@+id/graph2"
            app:layout_constraintEnd_toStartOf="@+id/HelpButton2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/HelpButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/HelpButtonText"
            app:layout_constraintBottom_toTopOf="@+id/graph2"
            app:layout_constraintEnd_toStartOf="@+id/ReturnButton5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/CalculateButton2" />

        <TextView
            android:id="@+id/textViewSolutionTrap2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Placeholder1"
            app:layout_constraintBottom_toTopOf="@+id/textViewSolutionSimpson2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CalculateButton2" />

        <TextView
            android:id="@+id/textViewSolutionSimpson2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Placeholder2"
            app:layout_constraintBottom_toTopOf="@+id/textViewSolutionExact2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSolutionTrap2" />

        <TextView
            android:id="@+id/textViewSolutionExact2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Placeholder3"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/graph2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSolutionSimpson2" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/graph2"
            android:layout_width="match_parent"
            android:layout_height="225dip"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/ReturnButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:text="@string/ReturnButtonText"
            app:layout_constraintBottom_toTopOf="@+id/graph2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/HelpButton2" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>